[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "philiprehberger-health-check"
version = "0.3.0"
description = "Health check endpoint builder for web applications."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Philip Rehberger" }]
keywords = ["health-check", "monitoring", "kubernetes", "liveness", "readiness"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/philiprehberger/py-health-check#readme"
Repository = "https://github.com/philiprehberger/py-health-check"
Issues = "https://github.com/philiprehberger/py-health-check/issues"
Changelog = "https://github.com/philiprehberger/py-health-check/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/philiprehberger_health_check"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
strict = true
